--- a/package.json
+++ b/package.json
@@ -1,37 +1,46 @@
 {
-  "name": "superherodb-api",
+  "name": "superherodb-parser",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A web scrapping tool to fetch superhero info from superherodb.com",
+  "main": "src/index.js",
   "directories": {
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "coverage": "istanbul cover _mocha tests -- --recursive",
+    "lint": "eslint src",
+    "mocha": "mocha tests --recursive",
+    "pretest": "npm run lint",
+    "test": "npm run mocha",
+    "posttest": "npm run coverage",
+    "prepublish": "npm test"
   },
+  "keywords": [
+    "superhero", "shdb", "super hero", "parser", "scrapping"
+  ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/guumaster/superherodb-api.git"
+    "url": "git+https://github.com/guumaster/superherodb-parser.git"
   },
   "author": "Guumaster <guuweb@gmail.com> (http://github.com/guumaster)",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/guumaster/superherodb-api/issues"
+    "url": "https://github.com/guumaster/superherodb-parser/issues"
   },
-  "homepage": "https://github.com/guumaster/superherodb-api#readme",
+  "homepage": "https://github.com/guumaster/superherodb-parser#readme",
   "dependencies": {
     "camelcase": "^1.2.1",
+    "debug": "^2.2.0",
     "lodash": "^3.10.1",
     "request-promise": "^1.0.2",
-    "slug": "^0.9.1",
-    "x-ray": "^2.0.2",
-    "xray": "^0.5.0"
+    "x-ray": "^2.0.2"
   },
   "devDependencies": {
     "babel-eslint": "^4.1.3",
     "chai": "^3.4.0",
     "eslint": "^1.8.0",
     "eslint-config-airbnb": "^0.1.0",
+    "istanbul": "^0.4.0",
     "mocha": "^2.3.3"
   }
 }
