--- a/package.json
+++ b/package.json
@@ -7,16 +7,20 @@
     "test": "tests"
   },
   "scripts": {
-    "coverage": "istanbul cover _mocha tests -- --recursive",
+    "coverage": "istanbul cover _mocha -- --recursive && istanbul-coveralls",
     "lint": "eslint src",
-    "mocha": "mocha tests --recursive",
+    "mocha": "mocha --recursive",
     "pretest": "npm run lint",
     "test": "npm run mocha",
     "posttest": "npm run coverage",
     "prepublish": "npm test"
   },
   "keywords": [
-    "superhero", "shdb", "super hero", "parser", "scrapping"
+    "superhero",
+    "shdb",
+    "super hero",
+    "parser",
+    "scrapping"
   ],
   "repository": {
     "type": "git",
@@ -38,9 +42,11 @@
   "devDependencies": {
     "babel-eslint": "^4.1.3",
     "chai": "^3.4.0",
+    "coveralls": "^2.11.4",
     "eslint": "^1.8.0",
     "eslint-config-airbnb": "^0.1.0",
     "istanbul": "^0.4.0",
+    "istanbul-coveralls": "^1.0.3",
     "mocha": "^2.3.3"
   }
 }
