--- a/package.json
+++ b/package.json
@@ -7,13 +7,10 @@
     "test": "tests"
   },
   "scripts": {
-    "coverage": "istanbul cover _mocha -- --recursive && istanbul-coveralls",
-    "lint": "eslint src",
     "mocha": "mocha --recursive",
-    "pretest": "npm run lint",
     "test": "npm run mocha",
-    "posttest": "npm run coverage",
-    "prepublish": "npm test"
+    "load": "node examples/load.js",
+    "fetch": "node examples/fetch.js"
   },
   "keywords": [
     "superhero",
@@ -33,20 +30,14 @@
   },
   "homepage": "https://github.com/guumaster/superherodb-parser#readme",
   "dependencies": {
-    "camelcase": "^1.2.1",
-    "debug": "^2.2.0",
-    "lodash": "^3.10.1",
-    "request-promise": "^1.0.2",
-    "x-ray": "^2.0.2"
+    "camelcase": "^6.0.0",
+    "debug": "^4.1.1",
+    "lodash": "^4.17.15",
+    "x-ray": "^2.3.4"
   },
   "devDependencies": {
-    "babel-eslint": "^4.1.3",
-    "chai": "^3.4.0",
-    "coveralls": "^2.11.4",
-    "eslint": "^1.8.0",
-    "eslint-config-airbnb": "^0.1.0",
-    "istanbul": "^0.4.0",
-    "istanbul-coveralls": "^1.0.3",
-    "mocha": "^2.3.3"
+    "babel-eslint": "^10.1.0",
+    "chai": "^4.2.0",
+    "mocha": "^7.2.0"
   }
 }
